--- a/囗/Readme
+++ b/囗/Readme
@@ -1,3 +1,6 @@
-# condroombivakmuts
+# condroombivakmuts 
 
-'singing halleluja'
+木 tree; wood, lumber; wooden
+馬 horse; surname
+大 big, great, vast, large, high
+猩 species of orangutan
