--- a/囗/Readme
+++ b/囗/Readme
@@ -4,3 +4,6 @@
 馬 horse; surname
 大 big, great, vast, large, high
 猩 species of orangutan
+
+面 face; surface; plane; side, dimension
+具 tool, implement; draw up, write
