--- a/囗/Readme
+++ b/囗/Readme
@@ -7,3 +7,5 @@
 
 面 face; surface; plane; side, dimension
 具 tool, implement; draw up, write
+夢 dream; visionary; wishful
+想 think, speculate, plan, consider
