--- a/囗/Readme
+++ b/囗/Readme
@@ -9,3 +9,6 @@
 具 tool, implement; draw up, write
 夢 dream; visionary; wishful
 想 think, speculate, plan, consider
+
+奇 strange, unusual, uncanny, occult
+蹟 trace, tracks; footprints
