--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 # retoxrama-blimp
 
-'de grezenloze arts'
+4 E 0 2    丂 obstruction of breath (qi) as it seeks release; variant of other characters
+5 D E 5    工 labor, work; worker, laborer
+5 3 E 3    口 mouth; open end; entrance, gate
+7 2 3 B    爻 diagrams for divination
