--- a/囗/Readme
+++ b/囗/Readme
@@ -1,11 +1,11 @@
 # condroombivakmuts 
 
-大 big, great, vast, large, high
-猩 species of orangutan
-面 face; surface; plane; side, dimension
-具 tool, implement; draw up, write
+5 9 2 7    大 big, great, vast, large, high
+7 3 2 9    猩 species of orangutan
+9 7 6 2    面 face; surface; plane; side, dimension
+5 1 7 7    具 tool, implement; draw up, write
 
-夢 dream; visionary; wishful
-想 think, speculate, plan, consider
-奇 strange, unusual, uncanny, occult
-蹟 trace, tracks; footprints
+5 9 2 2    夢 dream; visionary; wishful
+6 0 F 3    想 think, speculate, plan, consider
+5 9 4 7    奇 strange, unusual, uncanny, occult
+8 E 5 F    蹟 trace, tracks; footprints
