--- a/囗/Readme
+++ b/囗/Readme
@@ -25,3 +25,8 @@
 0 0 0 0            6 0 F 3    想 think, speculate, plan, consider
 0 0 0 0            5 9 4 7    奇 strange, unusual, uncanny, occult
 0 0 0 0            8 E 5 F    蹟 trace, tracks; footprints
+
+0 0 0 0            4 E 0 2    丂 obstruction of breath (qi) as it seeks release; variant of other characters
+0 0 0 0            5 D E 5    工 labor, work; worker, laborer
+0 0 0 0            5 3 E 3    口 mouth; open end; entrance, gate
+0 0 0 0            7 2 3 B    爻 diagrams for divination
