--- a/README
+++ b/README
@@ -26,7 +26,7 @@
 0 0 0 0            5 9 4 7    奇 strange, unusual, uncanny, occult
 0 0 0 0            8 E 5 F    蹟 trace, tracks; footprints
 
-0 0 0 0            4 E 0 2    丂 obstruction of breath (qi) as it seeks release; variant of other characters
+0 0 0 0            4 E 0 2    丂 obstruction of breath (qi) as it seeks release
 0 0 0 0            5 D E 5    工 labor, work; worker, laborer
 0 0 0 0            5 3 E 3    口 mouth; open end; entrance, gate
 0 0 0 0            7 2 3 B    爻 diagrams for divination
