--- a/README
+++ b/README
@@ -28,6 +28,16 @@ condroombivakmuts
 0 0 0 0            5 9 4 7    奇 strange, unusual, uncanny, occult
 0 0 0 0            8 E 5 F    蹟 trace, tracks; footprints
 
+0 0 0 0            5 0 B 3    傳 summon; propagate, transmit
+0 0 0 0            6 7 D 3    染 dye; be contagious; infect
+0 0 0 0            6 0 2 7    性 nature, character, sex
+0 0 0 0            7 6 8 4    的 possessive, adjectival suffix
+
+0 0 0 0            7 5 B E    疾 illness, disease, sickness; to hate
+0 0 0 0            7 5 C 5    病 illness, sickness, disease
+0 0 0 0            9 8 D B    飛 fly; go quickly; dart; high
+0 0 0 0            8 2 4 7    艇 small boat, dugout, punt
+
 0 0 0 0            4 E 0 2    丂 obstruction of breath (qi) as it seeks release
 0 0 0 0            5 D E 5    工 labor, work; worker, laborer
 0 0 0 0            5 3 E 3    口 mouth; open end; entrance, gate
