--- a/囗/實/Readme
+++ b/囗/實/Readme
@@ -1,5 +1,5 @@
 cì tòng
 =======
 
-5 2 3 A    刺 stab; prick, irritate; prod
+5 2 3 A    刺 thorn, sting, prick, pierce, stab, thrust, assassinate, murder
 7 5 D B    痛 pain, ache; sorry, sad; bitter
