--- a/囗/實/Readme
+++ b/囗/實/Readme
@@ -1,5 +1,4 @@
-cì tòng
-=======
-
+6 5 D 7    旗 banner, flag, streamer
+5 E 5 F    幟 flag, pennant; sign; fasten
 5 2 3 A    刺 thorn, sting, prick, pierce, stab, thrust, assassinate, murder
 7 5 D B    痛 pain, ache; sorry, sad; bitter
