--- a/囗/實/Readme
+++ b/囗/實/Readme
@@ -1,3 +1,8 @@
+示 show, manifest; demonstrate
+㕄 to apply knowledge to final causes; to extend knowledge to the utmost, equally; average, smooth
+至 reach, arrive; extremely, very
+阤 hill
+
 6 5 D 7    旗 banner, flag, streamer
 5 E 5 F    幟 flag, pennant; sign; fasten
 5 2 3 A    刺 thorn, sting, prick, pierce, stab, thrust, assassinate, murder
