--- a/囗/實/Readme
+++ b/囗/實/Readme
@@ -3,6 +3,11 @@
 至 reach, arrive; extremely, very
 阤 hill
 
+亓 (archaic form) his, her, its, their; that
+齐 even, uniform, of equal length
+伎 talent, skill, ability
+圻 bborder, boundary
+
 6 5 D 7    旗 banner, flag, streamer
 5 E 5 F    幟 flag, pennant; sign; fasten
 5 2 3 A    刺 thorn, sting, prick, pierce, stab, thrust, assassinate, murder
