--- a/囗/實/Readme
+++ b/囗/實/Readme
@@ -1,5 +1,5 @@
 示 show, manifest; demonstrate
-㕄 to apply knowledge to final causes; to extend knowledge to the utmost, equally; average, smooth  
+㕄 to apply knowledge to final causes 
 至 reach, arrive; extremely, very
 阤 hill
 
